Fix discounted price misalignment in Cart block (https://github.com/woocommerce/woocommerce-blocks/pull/3047)
* Fix discounted price misalignment in Cart block

* Fix Product Price block alignment

--- a/plugins/woocommerce-blocks/assets/js/atomic/blocks/product-elements/price/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/atomic/blocks/product-elements/price/style.scss
@@ -1,12 +1,15 @@
-.wc-block-components-product-price {
-	margin-top: 0;
-	margin-bottom: $gap-small;
-	display: block;
-
-	&__regular {
-		margin-right: 0.5em;
-	}
+/*rtl:begin:ignore*/
+.wc-block-components-product-price__align-left {
+	text-align: left;
 }
+.wc-block-components-product-price__align-center {
+	text-align: center;
+}
+.wc-block-components-product-price__align-right {
+	text-align: right;
+}
+/*rtl:end:ignore*/
+
 .is-loading {
 	.wc-block-components-product-price::before {
 		@include placeholder();
@@ -14,15 +17,4 @@
 		display: inline-block;
 		width: 5em;
 	}
-	/*rtl:begin:ignore*/
-	.wc-block-components-product-price__align-left {
-		text-align: left;
-	}
-	.wc-block-components-product-price__align-center {
-		text-align: center;
-	}
-	.wc-block-components-product-price__align-right {
-		text-align: right;
-	}
-	/*rtl:end:ignore*/
 }
